refactor(button style): add darkTheme button style

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -23,7 +23,7 @@
         --silverBox-cancel-color: #475467;
         --silverBox-cancel-bg-color: #fff;
         --silverBox-cancel-border-color: #d0d5dd;
-        --silverBox-cancel-hover-color: #838383;
+        --silverBox-cancel-hover-color: #d2d2d2;
         // inputs
         --silverBox-input-border-color: #d0d5dd;
         --silverBox-input-background: #fff;
@@ -48,18 +48,18 @@
         --silverBox-text-color: #9fa3ad;
         // confirm button
         --silverBox-confirm-color: #fff;
-        --silverBox-confirm-bg-color: #7f56d9;
-        --silverBox-confirm-border-color: #7f56d9;
-        --silverBox-confirm-hover-color: #d6bbfb;
+        --silverBox-confirm-bg-color: #4c2b92;
+        --silverBox-confirm-border-color: #4c2b92;
+        --silverBox-confirm-hover-color: #5a30b3;
         // deny button
         --silverBox-deny-color: #fff;
-        --silverBox-deny-bg-color: #d33;
-        --silverBox-deny-border-color: #d33;
-        --silverBox-deny-hover-color: #f75555;
+        --silverBox-deny-bg-color: #9d0f0f;
+        --silverBox-deny-border-color: #9d0f0f;
+        --silverBox-deny-hover-color: #d33;
         // cancel button
-        --silverBox-cancel-color: #475467;
-        --silverBox-cancel-bg-color: #fff;
-        --silverBox-cancel-border-color: #d0d5dd;
+        --silverBox-cancel-color: #fff;
+        --silverBox-cancel-bg-color: #5f5f5f;
+        --silverBox-cancel-border-color: #5f5f5f;
         --silverBox-cancel-hover-color: #838383;
         // inputs
         --silverBox-input-border-color: #39363f;
