--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 @import "./modules/reset";
+@import "./modules/fonts";
 @import "./silverBox.scss";
 
 // default font size for desktop
@@ -15,19 +15,12 @@
 }
 
 :root {
-<<<<<<< HEAD
-    --hamburger-bar-width: 20px;
-    --hamburger-bar-height: 3px;
-    --hamburger-gap: 3px;
-    --hamburger-height: calc((var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2));
-=======
 	--hamburger-bar-width: 20px;
 	--hamburger-bar-height: 3px;
 	--hamburger-gap: 3px;
 	--hamburger-height: calc(
 		(var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2)
 	);
->>>>>>> development
 }
 
 html {
@@ -103,18 +96,10 @@ body {
 }
 
 @media only screen and (max-width: 900px) {
-<<<<<<< HEAD
-
-    // hide horizontal overflow
-    body {
-        overflow-x: hidden;
-    }
-=======
 	// hide horizontal overflow
 	body {
 		overflow-x: hidden;
 	}
->>>>>>> development
 }
 
 .hidden {
@@ -144,392 +129,6 @@ code {
 }
 
 .container {
-<<<<<<< HEAD
-    margin: 0 auto;
-    width: 90vw;
-    max-width: 950px;
-    padding: 10px;
-
-    aside.sidebar {
-        transform: translateX(-85%);
-        position: fixed;
-        left: 10px;
-        display: flex;
-        column-gap: 10px;
-        transition: all 500ms;
-        max-width: max-content;
-
-        nav {
-            ul {
-                transition: all 500ms ease-in-out;
-
-                a {
-                    pointer-events: none;
-
-                    li {
-                        padding-right: 60px;
-                        transition: all 500ms ease-in-out;
-                    }
-
-                    //  the last navBar item
-                    &[href="#documentationSection"] {
-                        >li {
-                            position: relative;
-
-                            &::after {
-                                position: absolute;
-                                content: "";
-                                width: 5px;
-                                height: 5px;
-                                top: calc(50% - 1px);
-                                right: 45px;
-                                border-top: 1px solid;
-                                border-right: 1px solid;
-                                transform: rotate(45deg);
-                                transition: 0.2s;
-                            }
-
-                            &:hover {
-                                &::after {
-                                    transform: rotate(135deg);
-                                }
-
-                                ul {
-                                    visibility: visible;
-                                    opacity: 1;
-                                }
-                            }
-
-                            // the level 2 menu
-                            ul {
-                                display: flex;
-                                // x y
-                                overflow: hidden scroll;
-                                flex-wrap: wrap;
-                                height: 500px;
-                                top: 100%;
-                                left: -3px;
-                                width: 101.5%;
-                                position: absolute;
-                                background-color: #fff;
-                                transition: 0.2s;
-                                visibility: hidden;
-                                opacity: 0;
-
-                                li {
-                                    border-left: 3px solid var(--white-in-white);
-
-                                    &:hover {
-                                        border-left: 3px solid var(--primary-700);
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-        &.show-sidebar {
-            background-color: var(--white-in-white);
-            transform: translateX(0);
-
-            nav {
-                ul {
-                    box-shadow: 0 0 5px -1px #00000033;
-
-                    a {
-                        pointer-events: initial;
-
-                        li {
-                            padding: 12px 20px;
-                            padding-right: 60px;
-                            border-left: 3px solid white;
-
-                            &:hover {
-                                border-left: 3px solid var(--primary-700);
-                                color: var(--primary-700);
-                            }
-                        }
-
-                        &.navigationTitle {
-                            pointer-events: none;
-                            font-size: 14px;
-
-                            li {
-                                border-left: none;
-                                border-bottom: 1px solid var(--gray-100);
-                                background-color: white;
-                                color: var(--gray-700);
-                            }
-                        }
-                    }
-                }
-            }
-
-            .hamburger-menu {
-
-                &::before,
-                &::after,
-                >input {
-                    background-color: var(--gray-400);
-                }
-            }
-        }
-
-        .hamburger-menu {
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            gap: var(--hamburger-gap);
-            width: max-content;
-            height: max-content;
-            position: absolute;
-            top: 14px;
-            right: 7px;
-
-            &::before,
-            &::after,
-            >input {
-                content: "";
-                width: var(--hamburger-bar-width);
-                height: var(--hamburger-bar-height);
-                background-color: var(--gray-500);
-                border-radius: 900px;
-                transform-origin: left center;
-                transition: all 500ms ease-in-out;
-            }
-
-            >input {
-                appearance: none;
-                -webkit-appearance: none;
-                padding: 0;
-                margin: 0;
-                outline: none;
-                pointer-events: none;
-
-                &:checked {
-                    opacity: 0;
-                    width: 0;
-                }
-            }
-
-            &.show-x {
-                --x-width: calc(var(--hamburger-height) * 1.414421356237);
-
-                &::before {
-                    transform: rotate(45deg);
-                    width: var(--x-width);
-                    translate: 0 calc(var(--hamburger-bar-height) / -2);
-                }
-
-                &::after {
-                    transform: rotate(315deg);
-                    width: var(--x-width);
-                    translate: 0 calc(var(--hamburger-bar-height) / 2);
-                }
-            }
-        }
-    }
-
-    main {
-        .sectionHeader {
-            text-align: center;
-            font-size: 20px;
-            color: var(--gray-500);
-            margin-bottom: 20px;
-        }
-
-        section {
-            margin-bottom: 40px;
-        }
-
-        #heroSection {
-            h2.tagline {
-                text-align: center;
-                font-size: 30px;
-                color: #284b63;
-                font-weight: 600;
-                margin-bottom: 30px;
-            }
-
-            div.whySilverBox {
-                display: flex;
-                align-items: start;
-                justify-content: space-between;
-
-                div.introduction {
-                    text-align: justify;
-                    max-width: 45%;
-                    font-size: 20px;
-                    font-weight: 300;
-
-                    #silverBox-name-tag {
-                        color: #284b63;
-                        font-weight: bold;
-                    }
-                }
-
-                img {
-                    width: 45%;
-                }
-            }
-        }
-
-        #exampleSection {
-            row-gap: 20px;
-            display: grid;
-
-            .example {
-                display: grid;
-                grid-template-columns: 2fr 3fr;
-                gap: 0 20px;
-
-                .exampleColumn {
-                    &:first-of-type {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        text-align: left;
-                    }
-
-                    &:last-of-type {
-                        justify-self: end;
-                    }
-                }
-
-                .exampleConfig {
-                    min-width: 500px;
-                    max-width: 500px;
-                }
-            }
-        }
-
-        #documentationSection {
-            .tableWrapper {
-                text-align: start;
-                row-gap: 10px;
-                border: 1px solid var(--gray-300);
-                border-radius: 6px;
-
-                .tableRowHeader,
-                .tableRow {
-                    display: grid;
-                    grid-template-columns: 2fr 1fr 4fr;
-                    column-gap: 10px;
-
-                    &.silverBox-document-has-config {
-                        display: grid;
-                        grid-template-columns: 2fr 1fr 4fr;
-                    }
-
-                    .document-string {
-                        color: var(--document-string);
-                    }
-
-                    .document-boolean {
-                        color: var(--document-boolean);
-                    }
-
-                    .document-explanation {
-                        color: var(--document-explanation);
-                    }
-
-                    .document-undefined {
-                        color: var(--document-undefined);
-                    }
-
-                    .tableColumn {
-                        padding: 20px;
-                        overflow-x: hidden;
-
-                        &.silverBox-document-code {
-                            grid-column: 3 / 4;
-                        }
-
-                        &.document-argument {
-                            font-weight: 700;
-                            font-style: italic;
-                            color: var(--document-argument);
-                            font-size: 18px;
-                        }
-                    }
-
-                    .tableHeaderColumn {
-                        color: var(--gray-500) !important;
-                        min-width: max-content;
-                    }
-                }
-
-                .tableRowHeader {
-                    border-bottom: 1px solid var(--gray-300);
-                }
-            }
-        }
-
-        #theCreditsSection {
-            .teamMembers {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                gap: 20px;
-
-                .teamMember {
-                    display: flex;
-                    align-items: center;
-                    column-gap: 10px;
-                    border-radius: 6px;
-                    padding: 10px;
-                    transition: all 500ms ease-in-out;
-
-                    .memberImage {
-                        border-radius: 50%;
-                        width: 60px;
-                        height: 60px;
-                    }
-
-                    .memberInfo {
-                        padding: 10px;
-
-                        .memberName {
-                            color: var(--primary-700);
-                            transition: all 500ms ease-in-out;
-                        }
-
-                        .memberPosition {
-                            font-size: 13px;
-                        }
-                    }
-
-                    &:hover {
-                        background-color: var(--primary-700);
-                        color: white;
-
-                        .memberInfo {
-                            .memberName {
-                                color: white;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-footer {
-    background: #f3f3f3;
-    margin-top: 220px;
-    padding-block: 12px;
-
-    #sweetAlert {
-        color: #7066e0;
-    }
-
-    #Untitled-UI {
-        color: #7f56d9;
-    }
-}
-=======
 	margin: 0 auto;
 	width: 90vw;
 	max-width: 950px;
@@ -928,4 +527,3 @@ footer {
 		color: #7f56d9;
 	}
 }
->>>>>>> development
