feat(input): add a new config for converting inputs into select/option

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -101,7 +101,7 @@
     --silverBox-inside-input-gap:7px;
     --silverBox-input-parent-justify-content: space-around;
     --silverBox-input-parent-align-items: center;
-    --silverBox-input-parent-gap:0;
+    --silverBox-input-parent-gap:10px 0;
     --silverBox-hint-fontSize: 14px;
     --silverBox-input-fontSize: 14px;
     --silverBox-placeHolder-fontSize: 12px;
