--- a/public/src/css/components/_input.scss
+++ b/public/src/css/components/_input.scss
@@ -14,6 +14,9 @@
          text-align: start;
          width: 100%;
 
+         .silverBox-select {
+             width: fit-content;
+         }
 
          &>input,
          &>textarea {
