--- a/public/src/css/modules/_fonts.scss
+++ b/public/src/css/modules/_fonts.scss
@@ -1,53 +1,35 @@
 @font-face {
-    font-family: sp;
+    font-family: Source Sans Pro;
     font-weight: 100;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
+    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-ExtraLight.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: sp;
+    font-family: Source Sans Pro;
     font-weight: 200;
     src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: sp;
+    font-family: Source Sans Pro;
     font-weight: 300;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
+    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: sp;
+    font-family: Source Sans Pro;
     font-weight: 400;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
+    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: sp;
-    font-weight: 500;
+    font-family: Source Sans Pro;
+    font-weight: 700;
     src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: sp;
-    font-weight: 600;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: sp;
-    font-weight: 700;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: sp;
+    font-family: Source Sans Pro;
     font-weight: 800;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: sp;
-    font-weight: 900;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
+    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Black.ttf") format("truetype");
 }
