refactor(input): add some style + change the select config to an array of object

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -105,8 +105,8 @@
     --silverBox-hint-fontSize: 14px;
     --silverBox-input-fontSize: 14px;
     --silverBox-placeHolder-fontSize: 12px;
-
-
+    --silverBox-input-select-border-radius:2px;
+    --silverBox-input-select-padding:5px 8px;
     // icons
     --silverBox-custom-icon-width:100px;
     --silverBox-custom-icon-border-radius:10px;
