refactor(input): add selected and disabled attr to option/persian to eng

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -18,9 +18,7 @@
     --hamburger-bar-width: 20px;
     --hamburger-bar-height: 3px;
     --hamburger-gap: 3px;
-    --hamburger-height: calc(
-        (var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2)
-    );
+    --hamburger-height: calc((var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2));
 }
 
 html {
@@ -96,6 +94,7 @@ body {
 }
 
 @media only screen and (max-width: 900px) {
+
     // hide horizontal overflow
     body {
         overflow-x: hidden;
@@ -157,7 +156,7 @@ code {
 
                     //  the last navBar item
                     &[href="#documentationSection"] {
-                        > li {
+                        >li {
                             position: relative;
 
                             &::after {
@@ -204,8 +203,7 @@ code {
                                     border-left: 3px solid var(--white-in-white);
 
                                     &:hover {
-                                        border-left: 3px solid
-                                            var(--primary-700);
+                                        border-left: 3px solid var(--primary-700);
                                     }
                                 }
                             }
@@ -253,9 +251,10 @@ code {
             }
 
             .hamburger-menu {
+
                 &::before,
                 &::after,
-                > input {
+                >input {
                     background-color: var(--gray-400);
                 }
             }
@@ -274,7 +273,7 @@ code {
 
             &::before,
             &::after,
-            > input {
+            >input {
                 content: "";
                 width: var(--hamburger-bar-width);
                 height: var(--hamburger-bar-height);
@@ -284,7 +283,7 @@ code {
                 transition: all 500ms ease-in-out;
             }
 
-            > input {
+            >input {
                 appearance: none;
                 -webkit-appearance: none;
                 padding: 0;
@@ -405,8 +404,7 @@ code {
                             transition: 0.2s;
 
                             &.silverBox-copied {
-                                filter: grayscale(100%) sepia(100%)
-                                    hue-rotate(90deg);
+                                filter: grayscale(100%) sepia(100%) hue-rotate(90deg);
                             }
                         }
 
@@ -448,11 +446,13 @@ code {
                     overflow: hidden;
                     background-color: #eee;
                     transition: 0.5s ease-in-out;
+
                     &.hide {
                         max-height: 0 !important;
                         padding: 0 !important;
                     }
                 }
+
                 .silverBox-document-show-more {
                     cursor: pointer;
                     background-color: var(--primary-700);
@@ -463,33 +463,39 @@ code {
                     color: var(--gray-100);
                     transition: 0.2s linear;
                     border: 1px solid var(--primary-700);
-                    &.hide{
-                        &::after{
+
+                    &.hide {
+                        &::after {
                             transform: rotate(45deg);
-                            top: 8px;
+                            top: 40%;
                         }
                     }
+
                     position: relative;
+
                     &:hover {
                         color: var(--primary-700);
                         background-color: transparent;
-                        &::after{
+
+                        &::after {
                             border-color: var(--primary-700);
                         }
                     }
-                    &::after{
+
+                    &::after {
                         content: '';
                         width: 6px;
                         height: 6px;
                         position: absolute;
-                        border-top:1px solid var(--gray-100);
-                        border-right:1px solid var(--gray-100);
-                        top: 6px;
+                        border-top: 1px solid var(--gray-100);
+                        border-right: 1px solid var(--gray-100);
+                        top: 30%;
                         right: 5px;
                         transform: rotate(134deg);
                         transition: 0.2s linear;
                     }
                 }
+
                 .tableRowHeader,
                 .tableRow {
                     display: grid;
